Prevent flicker when returning to first item

--- a/less/flipper.less
+++ b/less/flipper.less
@@ -55,11 +55,6 @@
 		box-shadow: 0 10px 15px rgba(0,0,0,0.5);
 		.transform(0deg);
 
-		&.back {
-			z-index: 1;
-			.transform(180deg);
-		}
-
 		.flipper-item-title {
 			background: @primary-color;
 			color: @primary-color-inverted;
